<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/share_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/restart"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="2"
        android:title= "@string/restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_players"
        android:orderInCategory="3"
        android:title="@string/change_players"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="4"
        android:title="@string/exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/link"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="4"
        android:title="@string/link_to_githun_repo"
        app:showAsAction="never" />

</menu>